--- a/148.247.220.98/certificados/qr/qrCertificado5b71.html
+++ b/148.247.220.98/certificados/qr/qrCertificado5b71.html
@@ -131,7 +131,7 @@
                         <div class="row">
                             <div class="col-xs-4">Grado Acreditado: </div>
                             <div class="col-xs-8">
-                                Tecnico Bachiller en Maquinas y Herramientas
+                                Tecnico Bachiller en Mecatronica Industrial
                             </div>
                         </div>
 
